add unit test for language, speller client, task provider and single task processor