@@ -1,29 +1,42 @@
 package org.keda.errorfreetext.util;
 
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
+import org.keda.errorfreetext.properties.TextSplitterProperties;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.when;
 
+@ExtendWith(MockitoExtension.class)
 class TextSplitterTest {
 
-    private TextSplitter splitter = new TextSplitter(10);
+    @Mock
+    private TextSplitterProperties properties;
+
+    @InjectMocks
+    private TextSplitter splitter;
 
     @ParameterizedTest
     @ValueSource(strings = {"Hello", "abcdefghij", ""})
     void shouldReturnSingleChunkWhenTextLengthLessOrEqualsThanMaxChunkSize(String text) {
+        when(properties.maxChunkSize()).thenReturn(10);
         List<String> chunks = splitter.split(text);
         assertEquals(1, chunks.size());
-        assertEquals(text, chunks.get(0));
+        assertEquals(text, chunks.getFirst());
     }
 
     @ParameterizedTest
     @ValueSource(strings = {"abc def ghi jkl mno pqr", "abcdefghijklmno"})
     void shouldSplitTextIntoChunksWhenTextLengthGreaterThanMaxChunkSize(String text) {
+        when(properties.maxChunkSize()).thenReturn(10);
         List<String> chunks = splitter.split(text);
 
         for (String chunk : chunks) {
@@ -37,8 +50,8 @@ class TextSplitterTest {
     @Test
     void shouldReturnEmptyListWhenTextIsNull() {
         String text = null;
+        when(properties.maxChunkSize()).thenReturn(10);
         List<String> chunks = splitter.split(text);
         assertTrue(chunks.isEmpty());
     }
-
 }
